#ifndef BOOKSPECIFICATION_H
#define BOOKSPECIFICATION_H

#include "Book.h"
#include <algorithm>
#include <string>
#include <vector>
#include "Author.h"

using namespace std;

class BookSpecification {
public:
    virtual ~BookSpecification() = default;
    virtual bool isSatisfied(Book* item) = 0;
};

class BookTitleBookSpecification : public BookSpecification {
    string title;
public:
    BookTitleBookSpecification(const string& title) : title(title) {}
    bool isSatisfied(Book* item) override {
        return item->getName() == title;
    }
};

class BookGenreBookSpecification : public BookSpecification {
    string genre;
public:
    BookGenreBookSpecification(const string& genre) : genre(genre) {}
    bool isSatisfied(Book* item) override {
        return item->getGenre() == genre;
    }
};

class BookAuthorBookSpecification : public BookSpecification {
    string author;
public:
    BookAuthorBookSpecification(const string& author) : author(author) {}
    bool isSatisfied(Book* item) override {
        vector<Author*> authors = item->getAuthors();
        return any_of(authors.begin(), authors.end(), [this](Author* a) {
            return a->getName() == author;
        });
    }
};

class BookPublisherBookSpecification : public BookSpecification {
    string publisher;
public:
    BookPublisherBookSpecification(const string& publisher) : publisher(publisher) {}
    bool isSatisfied(Book* item) override {
        return item->getPublisher() == publisher;
    }
};

class BookPriceRangeBookSpecification : public BookSpecification {
    double minPrice;
    double maxPrice;
public:
    BookPriceRangeBookSpecification(double minPrice, double maxPrice) 
        : minPrice(minPrice), maxPrice(maxPrice) {}
    bool isSatisfied(Book* item) override {
        double price = item->getPrice();
        const double EPSILON = 1e-9;
        return (price + EPSILON >= minPrice) && (price - EPSILON <= maxPrice);
    }
};

#endif // BOOKSPECIFICATION_H